--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,18 @@ language: php
 
 php:
   - 7.0
+  - 7.1
 
 before_script:
-  - mkdir bootstrap/cache
-  - mkdir storage
-  - mkdir storage/app
-  - mkdir storage/framework
-  - mkdir storage/framework/sessions
-  - mkdir storage/framework/cache
-  - mkdir storage/framework/views
-  - chmod 777 -R storage
   - cp .env.travis .env
   - composer self-update
-  - composer install --no-interaction
+  - composer install --prefer-source --no-interaction --dev
   - php artisan key:generate
+  - php artisan jwt:generate
+  - php artisan migrate
 
 script:
-  - vendor/bin/phpunit
+  - phpunit
+
+notifications:
+  email: false
